--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "lib/index.js",
   "scripts": {
-    "tsc": "./node_modules/.bin/tsc -p ./tsconfig.json",
+    "tsc": "./node_modules/.bin/tsc -p ./tsconfig.json --watch",
     "lint": "eslint .",
     "test": "npm run tsc && mocha --require intelli-espower-loader",
     "coverage": "nyc npm run test"
@@ -31,7 +31,6 @@
     "esm": "^3.2.25",
     "espower-typescript": "^9.0.2",
     "intelli-espower-loader": "^1.0.1",
-    "ip": "^1.1.5",
     "mocha": "^6.2.0",
     "nyc": "^14.1.1",
     "power-assert": "^1.6.1",
@@ -65,6 +64,8 @@
     "all": true
   },
   "dependencies": {
+    "ip": "^1.1.5",
+    "nan": "^2.14.0",
     "typescript": "^3.5.3"
   }
 }
